# MedAgentPro

./: .gitignore  Case_level.py  CodingAgent.py  Evaluator.py  Planner.py  RAG.py  Summary_Module.py  Task_level.py  convert_masks.py  download_sam_checkpoint.py  openai_compat.py  pyproject.toml  run_single_case_demo.ps1  single_case_demo.py  test_api.py
Decider/: GPT_Decider.py  Pro_Decider.py  __init__.py
Glaucoma/: plan.json
Glaucoma/tools/: GenCode.py  __init__.py
data/: reorganize.py
record_deprecated/Glaucoma_g0001/: brief_diagnosis.json  diagnosis.json  final_diagnosis.json
record_deprecated/Glaucoma_g0004/: brief_diagnosis.json  diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0001/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0002/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0003/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0004/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0005/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0006/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0007/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0008/: diagnosis.json  final_diagnosis.json
record_deprecated/REFUGE2_0422/Glaucoma_g0009/: diagnosis.json  final_diagnosis.json
tools/: __init__.py
tools/MSA/: cfg.py  model.py  utils.py
(+792 files in other folders)
