[project]
name = "medagentpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.8,<2.9",
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "openai==0.28.1",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "tqdm>=4.67.3",
    "transformers<5",
    "kaggle>=2.0.1",
    "scikit-learn>=1.8.0",
    "bs4>=0.0.2",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-text-splitters==0.0.2",
    "tiktoken>=0.12.0",
    "faiss-cpu>=1.13.2",
    "numpy==1.26.4",
    "langchain-core==0.1.53",
]
